<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:textAlignment="center"
    android:theme="@android:style/Theme.Black.NoTitleBar"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textColor="#000000"
        android:textColorHighlight="#B9DEFB"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/txtTickets"
        android:layout_width="337dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/txtTickets"
        android:inputType="number"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/btnCost"
        android:layout_width="334dp"
        android:layout_height="71dp"
        android:layout_marginBottom="328dp"
        android:background="@color/material_dynamic_tertiary30"
        android:text="@string/btnCost"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#673AB7"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="226dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCost"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="339dp"
        android:layout_height="44dp"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textColor="#494267"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.357" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:entries="@array/txtGroup"
        android:popupBackground="#494267"
        android:prompt="@string/prompt"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTickets" />

</androidx.constraintlayout.widget.ConstraintLayout>